--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dinemarket",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,5 +7,42 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.16.4",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.4",
+    "lucide-react": "^0.221.0",
+    "next": "13.4.4",
+    "next-sanity": "^5.4.6",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-day-picker": "^8.7.1",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
+    "react-slick": "^0.29.0",
+    "sanity": "^3.16.4",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "5.2",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
