--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "lucide-react": "^0.221.0",
-    "next": "13.4.4",
+    "next": "^13.4.19",
     "next-sanity": "^5.4.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-redux": "^8.1.1",
+    "react-redux": "^8.1.2",
     "react-slick": "^0.29.0",
     "sanity": "^3.16.4",
     "slick-carousel": "^1.8.1",
